# OpenSSL-CMake-PoC

./: CMakeLists.txt
openssl/: CMakeLists.txt
test-tool/: CMakeLists.txt  main.cpp
